src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Send_Interaction_Service_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Interaction Service - Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Interaction_Service_Guest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Interaction Service - Guest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>textus__TextUsBizMessageId__c</fullName>
        <description>The identifier assigned to the message in TextUs.Biz</description>
        <externalId>true</externalId>
        <inlineHelpText>Id of the message in TextUs.Biz app</inlineHelpText>
        <label>TextUs.Biz Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>